# libcint

./: CMakeLists.txt
cmake/: cintConfig.cmake.in
include/: cint.h.in
